<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/button_green">

    <Button
        android:id="@+id/backButton_imagePick"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/back_arrow"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:layout_marginStart="4dp" />


    <LinearLayout
        android:id="@+id/linear_layout_for_pickImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">


        <Button
            android:id="@+id/pickImage_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/button_choose_image"
            android:layout_gravity="top"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/remove_image_button_imagePick"
            android:layout_marginTop="40dp"
            android:layout_width="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/button_remove_image"
            android:background="@color/colorPrimary"
            android:textColor="@color/black"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/picked_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="65dp"
        android:layout_marginRight="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_for_pickImageButton"
        app:layout_constraintBottom_toTopOf="@id/button_doneImagePick"/>

    <Button
        android:id="@+id/button_doneImagePick"
        android:layout_width="100dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:text="@string/button_apply_image_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimary"
        android:textColor="@color/black"/>

</android.support.constraint.ConstraintLayout>